kubernetes/network/gateway-canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hello-gateway
  namespace: net-demo
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: hello.local
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-canary-route
  namespace: net-demo
spec:
  parentRefs:
    - name: hello-gateway
  hostnames:
    - hello.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-devops-svc
          port: 80
          weight: 80
        - name: hello-v2-svc
          port: 80
          weight: 20
